--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Lab 2 - ASP.NET MVC Fundamentals</h1>
+    <p>This lab is to show our ability to successfully create a new .NET Core MVC web application and use some basic MVC Concepts. </p>
 </div>
